--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity">
+    android:background="@color/dark"
+    tools:context=".SignInActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -12,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
         android:fontFamily="@font/poppins_semibold"
-        android:text="@string/inscription"
-        android:textColor="@color/black"
+        android:text="@string/connexion"
+        android:textColor="@color/white"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -25,7 +26,7 @@
         android:layout_width="50dp"
         android:layout_height="5dp"
         android:layout_marginTop="28dp"
-        android:background="@color/black"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,19 +40,15 @@
         android:layout_height="wrap_content"
         android:hint="@string/email"
         android:layout_margin="15dp"
-        android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/black"
+        android:textColorHint="@color/white"
+        app:boxStrokeColor="@color/white"
         app:boxStrokeWidthFocused="2dp"
-        app:endIconMode="password_toggle"
-        app:endIconTint="@color/black"
-        app:hintTextColor="@color/black"
+        app:hintTextColor="@color/white"
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/black"
         app:startIconDrawable="@drawable/ic_email"
-        app:startIconTint="@color/black">
+        app:startIconTint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -68,19 +65,19 @@
         android:layout_marginTop="50dp"
         android:hint="@string/mot_de_passe"
         android:layout_margin="15dp"
-        android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/black"
+        android:textColorHint="@color/white"
+        app:boxStrokeColor="@color/white"
         app:boxStrokeWidthFocused="2dp"
         app:endIconMode="password_toggle"
-        app:endIconTint="@color/black"
-        app:hintTextColor="@color/black"
+        app:endIconTint="@color/white"
+        app:hintTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tilEmail"
         app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/black"
+        app:passwordToggleTint="@color/white"
         app:startIconDrawable="@drawable/ic_lock"
-        app:startIconTint="@color/black">
+        app:startIconTint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
