--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -90,17 +90,31 @@
         android:id="@+id/btnConnexion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:backgroundTint="@color/black"
-        android:text="@string/cr_er"
         android:layout_margin="20dp"
-        android:textSize="20sp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
         android:fontFamily="@font/poppins_semibold"
+        android:text="@string/cr_er"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tilMdpCo" />
+
+    <Button
+        android:id="@+id/btnGoogleSignin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="164dp"
+        android:backgroundTint="#D50000"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="@string/google_sign_in"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilMdpCo"
-        app:layout_constraintVertical_bias="0.076" />
+        app:layout_constraintTop_toBottomOf="@+id/btnConnexion" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
